After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 784027 - mxfdemux/mux: Does not handle frame reordering correctly
mxfdemux/mux: Does not handle frame reordering correctly
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.12.0
Other Linux
: Normal normal
: 1.12.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-06-21 09:21 UTC by Sebastian Dröge (slomo)
Modified: 2017-07-04 06:19 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastian Dröge (slomo) 2017-06-21 09:21:20 UTC
We should use the "temporal offset" in the index table segments for that, which allows to get the mapping between "edit unit in coding order" <-> "edit unit in presentation order".
Comment 1 Sebastian Dröge (slomo) 2017-06-27 07:53:28 UTC
commit 830e89b7e9418c7039021ebc4060d5c922e928b0 (HEAD -> master)
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Tue Jun 27 10:47:44 2017 +0300

    mxfdemux: Take temporal reordering from the index table into account
    
    This is needed to know the PTS, without that we only know the DTS and
    using that also for the PTS is wrong unless we have an intra-only codec.
    
    If we can't get the temporal reordering from the index table, don't set
    any PTS for non-intra-only codecs and let decoders figure out something.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=784027
Comment 2 Sebastian Dröge (slomo) 2017-06-27 12:04:53 UTC
commit 1069330f766f2e9a12d9dd8689352de0f4d03c7f (HEAD -> master, origin/master, origin/HEAD)
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Tue Jun 27 15:01:22 2017 +0300

    mxfmux: Write temporal offset and correct keyframe offset into index table
    
    https://bugzilla.gnome.org/show_bug.cgi?id=784027