mxfmux: Write temporal offset and correct keyframe offset into index table

https://bugzilla.gnome.org/show_bug.cgi?id=784027